--- a/MyPlaces/Base.lproj/Main.storyboard
+++ b/MyPlaces/Base.lproj/Main.storyboard
@@ -110,15 +110,15 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Photo" translatesAutoresizingMaskIntoConstraints="NO" id="6D3-4U-gXq">
-                                                    <rect key="frame" x="20" y="20" width="374" height="230.00000000000006"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
                                                 </imageView>
                                             </subviews>
                                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstItem="6D3-4U-gXq" firstAttribute="top" secondItem="3Bs-GA-mCc" secondAttribute="top" constant="20" symbolic="YES" id="9bX-Mv-jZm"/>
-                                                <constraint firstItem="6D3-4U-gXq" firstAttribute="leading" secondItem="3Bs-GA-mCc" secondAttribute="leading" constant="20" symbolic="YES" id="HT2-ac-jsL"/>
-                                                <constraint firstAttribute="bottom" secondItem="6D3-4U-gXq" secondAttribute="bottom" id="YaL-Va-GDN"/>
-                                                <constraint firstAttribute="trailing" secondItem="6D3-4U-gXq" secondAttribute="trailing" constant="20" symbolic="YES" id="s4l-6E-dcK"/>
+                                                <constraint firstAttribute="trailing" secondItem="6D3-4U-gXq" secondAttribute="trailing" id="BMp-C7-ojE"/>
+                                                <constraint firstItem="6D3-4U-gXq" firstAttribute="top" secondItem="3Bs-GA-mCc" secondAttribute="top" id="O5e-iY-8Ec"/>
+                                                <constraint firstAttribute="bottom" secondItem="6D3-4U-gXq" secondAttribute="bottom" constant="5.6843418860808015e-14" id="cZU-w9-lq8"/>
+                                                <constraint firstItem="6D3-4U-gXq" firstAttribute="leading" secondItem="3Bs-GA-mCc" secondAttribute="leading" id="jFU-NN-xNi"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
