--- a/MyPlaces/Base.lproj/Main.storyboard
+++ b/MyPlaces/Base.lproj/Main.storyboard
@@ -79,7 +79,7 @@
                             <outlet property="delegate" destination="X39-6y-BNd" id="gGS-xu-wZN"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="MyPlaces" id="gpc-gj-hHi">
+                    <navigationItem key="navigationItem" title="MyPlaces" largeTitleDisplayMode="always" id="gpc-gj-hHi">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="YXj-qa-CYd">
                             <connections>
                                 <segue destination="tpw-9l-zuN" kind="presentation" id="Sgz-qL-rIF"/>
