--- a/MyPlaces/Base.lproj/Main.storyboard
+++ b/MyPlaces/Base.lproj/Main.storyboard
@@ -186,7 +186,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="85" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zMK-5o-Iow">
-                                <rect key="frame" x="0.0" y="20" width="414" height="856"/>
+                                <rect key="frame" x="0.0" y="20" width="414" height="876"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="EsE-MA-ux3" customClass="CustomTableViewCell" customModule="MyPlaces" customModuleProvider="target">
@@ -256,7 +256,7 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="zMK-5o-Iow" secondAttribute="bottom" constant="20" symbolic="YES" id="0mM-OW-q6G"/>
+                            <constraint firstAttribute="bottom" secondItem="zMK-5o-Iow" secondAttribute="bottom" id="0mM-OW-q6G"/>
                             <constraint firstItem="zMK-5o-Iow" firstAttribute="leading" secondItem="ddV-G4-QNB" secondAttribute="leading" id="7cw-lH-vvV"/>
                             <constraint firstItem="zMK-5o-Iow" firstAttribute="trailing" secondItem="ddV-G4-QNB" secondAttribute="trailing" id="7kr-7A-ApA"/>
                             <constraint firstItem="zMK-5o-Iow" firstAttribute="top" secondItem="bHG-21-XUA" secondAttribute="top" constant="20" symbolic="YES" id="xXu-F3-wi4"/>
@@ -277,7 +277,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UT2-pN-QDA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="929" y="144"/>
+            <point key="canvasLocation" x="928.98550724637687" y="143.97321428571428"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="foT-7p-Qqq">
