--- a/MyPlaces/Base.lproj/Main.storyboard
+++ b/MyPlaces/Base.lproj/Main.storyboard
@@ -186,7 +186,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="85" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zMK-5o-Iow">
-                                <rect key="frame" x="0.0" y="20" width="414" height="876"/>
+                                <rect key="frame" x="0.0" y="127" width="414" height="769"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="EsE-MA-ux3" customClass="CustomTableViewCell" customModule="MyPlaces" customModuleProvider="target">
@@ -253,13 +253,22 @@
                                     <outlet property="delegate" destination="4Dk-gW-qzE" id="vCi-MY-EO8"/>
                                 </connections>
                             </tableView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" id="vvv-e7-ZKH">
+                                <rect key="frame" x="0.0" y="88" width="414" height="32"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <segments>
+                                    <segment title="Date"/>
+                                    <segment title="Name"/>
+                                </segments>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="zMK-5o-Iow" secondAttribute="bottom" id="0mM-OW-q6G"/>
-                            <constraint firstItem="zMK-5o-Iow" firstAttribute="leading" secondItem="ddV-G4-QNB" secondAttribute="leading" id="7cw-lH-vvV"/>
-                            <constraint firstItem="zMK-5o-Iow" firstAttribute="trailing" secondItem="ddV-G4-QNB" secondAttribute="trailing" id="7kr-7A-ApA"/>
-                            <constraint firstItem="zMK-5o-Iow" firstAttribute="top" secondItem="bHG-21-XUA" secondAttribute="top" constant="20" symbolic="YES" id="xXu-F3-wi4"/>
+                            <constraint firstItem="zMK-5o-Iow" firstAttribute="top" secondItem="ddV-G4-QNB" secondAttribute="top" constant="39" id="BBl-d0-bZo"/>
+                            <constraint firstItem="zMK-5o-Iow" firstAttribute="top" secondItem="vvv-e7-ZKH" secondAttribute="bottom" constant="8" id="UxW-cI-2B2"/>
+                            <constraint firstItem="zMK-5o-Iow" firstAttribute="trailing" secondItem="ddV-G4-QNB" secondAttribute="trailing" id="UyQ-ax-AuI"/>
+                            <constraint firstItem="zMK-5o-Iow" firstAttribute="leading" secondItem="ddV-G4-QNB" secondAttribute="leading" id="V3w-MQ-nIg"/>
+                            <constraint firstAttribute="bottom" secondItem="zMK-5o-Iow" secondAttribute="bottom" id="zzh-R7-mDu"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ddV-G4-QNB"/>
                     </view>
