--- a/MyPlaces/Base.lproj/Main.storyboard
+++ b/MyPlaces/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Photo" translatesAutoresizingMaskIntoConstraints="NO" id="6D3-4U-gXq">
-                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="250.00000000000006"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
                                                 </imageView>
                                             </subviews>
                                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -161,6 +161,8 @@
                                                 </stackView>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstItem="rRC-ke-GmK" firstAttribute="centerX" secondItem="eTB-L5-I4w" secondAttribute="centerX" id="KS6-Qi-jTY"/>
+                                                <constraint firstItem="rRC-ke-GmK" firstAttribute="centerY" secondItem="eTB-L5-I4w" secondAttribute="centerY" id="fuZ-GJ-BpR"/>
                                                 <constraint firstItem="rRC-ke-GmK" firstAttribute="centerX" secondItem="eTB-L5-I4w" secondAttribute="centerX" id="nZB-hf-4Eg"/>
                                                 <constraint firstItem="rRC-ke-GmK" firstAttribute="centerY" secondItem="eTB-L5-I4w" secondAttribute="centerY" id="qqR-DY-vS0"/>
                                             </constraints>
