--- a/MyPlaces/Base.lproj/Main.storyboard
+++ b/MyPlaces/Base.lproj/Main.storyboard
@@ -151,7 +151,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="140"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="rRC-ke-GmK" customClass="RatingControl" customModule="MyPlaces" customModuleProvider="target">
+                                                <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="rRC-ke-GmK" customClass="RatingControl" customModule="MyPlaces" customModuleProvider="target">
                                                     <rect key="frame" x="81" y="48" width="252" height="44"/>
                                                     <userDefinedRuntimeAttributes>
                                                         <userDefinedRuntimeAttribute type="number" keyPath="starCount">
@@ -193,6 +193,7 @@
                         <outlet property="placeLocation" destination="lrB-LW-lfQ" id="GVQ-HT-ex1"/>
                         <outlet property="placeName" destination="Yag-3C-jec" id="6Hk-YN-CZo"/>
                         <outlet property="placeType" destination="NyJ-Pe-lVn" id="VOt-Bx-zap"/>
+                        <outlet property="ratingControl" destination="rRC-ke-GmK" id="Siu-59-GhC"/>
                         <outlet property="saveButton" destination="Nhl-1G-kxT" id="xVs-Eu-muJ"/>
                     </connections>
                 </tableViewController>
