--- a/MyPlaces/Base.lproj/Main.storyboard
+++ b/MyPlaces/Base.lproj/Main.storyboard
@@ -27,15 +27,28 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Photo" translatesAutoresizingMaskIntoConstraints="NO" id="6D3-4U-gXq">
-                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="250.00000000000006"/>
                                                 </imageView>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XEa-Ol-v5R">
+                                                    <rect key="frame" x="344" y="189" width="50" height="50"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="50" id="Yp3-m8-wLx"/>
+                                                        <constraint firstAttribute="width" constant="50" id="zTe-Mk-e8k"/>
+                                                    </constraints>
+                                                    <state key="normal" image="map"/>
+                                                    <connections>
+                                                        <segue destination="7ju-pT-GRx" kind="presentation" id="3Mw-MC-Yl4"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstAttribute="trailing" secondItem="6D3-4U-gXq" secondAttribute="trailing" id="BMp-C7-ojE"/>
+                                                <constraint firstItem="XEa-Ol-v5R" firstAttribute="trailing" secondItem="3Bs-GA-mCc" secondAttribute="trailingMargin" id="CUC-ou-2Kv"/>
                                                 <constraint firstItem="6D3-4U-gXq" firstAttribute="top" secondItem="3Bs-GA-mCc" secondAttribute="top" id="O5e-iY-8Ec"/>
                                                 <constraint firstAttribute="bottom" secondItem="6D3-4U-gXq" secondAttribute="bottom" constant="5.6843418860808015e-14" id="cZU-w9-lq8"/>
                                                 <constraint firstItem="6D3-4U-gXq" firstAttribute="leading" secondItem="3Bs-GA-mCc" secondAttribute="leading" id="jFU-NN-xNi"/>
+                                                <constraint firstItem="XEa-Ol-v5R" firstAttribute="bottom" secondItem="3Bs-GA-mCc" secondAttribute="bottomMargin" id="tTH-ln-Phb"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -202,6 +215,45 @@
             </objects>
             <point key="canvasLocation" x="1687" y="144"/>
         </scene>
+        <!--Map View Controller-->
+        <scene sceneID="NMW-Ua-ved">
+            <objects>
+                <viewController id="7ju-pT-GRx" customClass="MapViewController" customModule="MyPlaces" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="AGi-OD-caz">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Mft-et-7Q6">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                            </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6zo-G8-nFe">
+                                <rect key="frame" x="370" y="20" width="24" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24" id="5Mp-AB-8ns"/>
+                                    <constraint firstAttribute="width" constant="24" id="E48-tN-jOa"/>
+                                </constraints>
+                                <state key="normal" image="cancel"/>
+                                <connections>
+                                    <action selector="cancelMapVC" destination="7ju-pT-GRx" eventType="touchUpInside" id="9aB-oM-b0n"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="Mft-et-7Q6" firstAttribute="top" secondItem="AGi-OD-caz" secondAttribute="top" id="40p-as-Ykq"/>
+                            <constraint firstItem="Mft-et-7Q6" firstAttribute="leading" secondItem="FYe-hm-JtR" secondAttribute="leading" id="5iU-wo-Cgb"/>
+                            <constraint firstItem="FYe-hm-JtR" firstAttribute="trailing" secondItem="6zo-G8-nFe" secondAttribute="trailing" constant="20" id="Nip-uR-vTh"/>
+                            <constraint firstItem="Mft-et-7Q6" firstAttribute="trailing" secondItem="FYe-hm-JtR" secondAttribute="trailing" id="OHl-Gb-CqJ"/>
+                            <constraint firstAttribute="bottom" secondItem="Mft-et-7Q6" secondAttribute="bottom" id="YEK-ys-TGb"/>
+                            <constraint firstItem="6zo-G8-nFe" firstAttribute="top" secondItem="FYe-hm-JtR" secondAttribute="top" constant="20" id="ome-kH-IOi"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="FYe-hm-JtR"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hmS-NN-eVG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2471.0144927536235" y="140.625"/>
+        </scene>
         <!--MyPlaces-->
         <scene sceneID="ZeP-77-8IJ">
             <objects>
@@ -366,6 +418,8 @@
     <resources>
         <image name="AZ" width="25" height="24"/>
         <image name="Photo" width="195" height="196"/>
+        <image name="cancel" width="128" height="128"/>
+        <image name="map" width="50" height="50"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="b97-aR-mMM"/>
